--- a/templates/edit.html
+++ b/templates/edit.html
@@ -346,7 +346,7 @@
     <div class="row">
         <div class="col">
             {% if perm_zone_master_add and domain_type != "SLAVE"%}
-            <form method="post" action="">
+            <form class="needs-validation" method="post" action="" novalidate>
                 <input type="hidden" name="_token" value="{{ csrf_token }}">
                 <table>
                     <tr>
@@ -354,7 +354,10 @@
                     </tr>
                     <tr>
                         <td>{% trans %}Template Name{% endtrans %}</td>
-                        <td><input class="form-control form-control-sm" type="text" name="templ_name" value=""></td>
+                        <td>
+                            <input class="form-control form-control-sm" type="text" name="templ_name" value="" required>
+                            <div class="invalid-feedback">{% trans %}Provide template name{% endtrans %}</div>
+                        </td>
                     </tr>
                     <tr>
                         <td>{% trans %}Template Description{% endtrans %}</td>
