--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -68,7 +68,7 @@
     <span class="align-middle">
         &nbsp;
         <input class="form-check-input" type="checkbox" name="reverse">
-        <span class="text-secondary"> {% trans %}Add also reverse record{% endtrans %}</span>
+        <span class="text-secondary"> {% trans %}Also add a PTR record in the matching zone{% endtrans %}</span>
     </span>
     {% endif %}
     {% if is_reverse_zone and iface_add_forward_record %}
