--- a/templates/edit.html
+++ b/templates/edit.html
@@ -335,14 +335,14 @@
     <span class="align-middle">
         &nbsp;
         <input class="form-check-input" type="checkbox" name="reverse">
-        <span class="text-secondary"> {% trans %}Add also reverse record{% endtrans %}</span>
+        <span class="text-secondary"> {% trans %}Also add a PTR record in the matching zone{% endtrans %}</span>
     </span>
     {% endif %}
     {% if is_reverse_zone and iface_add_forward_record %}
     <span class="align-middle">
         &nbsp;
         <input class="form-check-input" type="checkbox" name="forward">
-        <span class="text-secondary"> {% trans %}Add also forward record{% endtrans %}</span>
+        <span class="text-secondary"> {% trans %}Also add an A/AAAA record in the matching zone{% endtrans %}</span>
     </span>
     {% endif %}
 </form>
