--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -74,7 +74,7 @@
     {% if is_reverse_zone and iface_add_domain_record %}
     <span class="align-middle">
         &nbsp;
-        <input class="form-check-input" type="checkbox" name="domain">
+        <input class="form-check-input" type="checkbox" name="create_domain_record">
         <span class="text-secondary"> {% trans %}Also add an A/AAAA record in the matching zone{% endtrans %}</span>
     </span>
     {% endif %}
