--- a/templates/edit.html
+++ b/templates/edit.html
@@ -46,7 +46,14 @@
             <th>{% trans %}Content{% endtrans %}</th>
             <th>{% trans %}Priority{% endtrans %}</th>
             <th>{% trans %}TTL{% endtrans %}</th>
-            <th>{% trans %}Add reverse{% endtrans %}</th>
+            <th class="text-center">
+                {% if not is_reverse_zone and iface_add_reverse_record %}
+                    {% trans %}Add PTR{% endtrans %}
+                {% endif %}
+                {% if is_reverse_zone and iface_add_domain_record %}
+                    {% trans %}Add A/AAAA{% endtrans %}
+                {% endif %}
+            </th>
             <th></th>
         </tr>
         <tr>
@@ -86,9 +93,14 @@
                 <div class="invalid-feedback">{% trans %}Provide TTL{% endtrans %}</div>
             </td>
             <td class="col-sm-1 text-center">
-                {% if not is_reverse_zone and rev %}
+                {% if not is_reverse_zone and iface_add_reverse_record %}
                 <span class="align-middle">
                     <input class="form-check-input" type="checkbox" name="reverse">
+                </span>
+                {% endif %}
+                {% if is_reverse_zone and iface_add_domain_record %}
+                <span class="align-middle">
+                    <input class="form-check-input" type="checkbox" name="create_domain_record">
                 </span>
                 {% endif %}
             </td>
@@ -341,7 +353,7 @@
     {% if is_reverse_zone and iface_add_domain_record %}
     <span class="align-middle">
         &nbsp;
-        <input class="form-check-input" type="checkbox" name="domain">
+        <input class="form-check-input" type="checkbox" name="create_domain_record">
         <span class="text-secondary"> {% trans %}Also add an A/AAAA record in the matching zone{% endtrans %}</span>
     </span>
     {% endif %}
