--- a/templates/list_zones.html
+++ b/templates/list_zones.html
@@ -110,12 +110,11 @@
             <td><i class="bi bi-{{ zone['secured'] ? 'lock-fill' : 'unlock-fill' }}"></i></td>
             {% endif %}
             <td>
-                <a class="btn btn-outline-primary btn-sm" href="index.php?page=edit&id={{ zone['id'] }}">
+                <a class="btn btn-outline-primary btn-sm" href="index.php?page=edit&id={{ zone['id'] }}" data-testid="edit-zone-{{ zone['id'] }}">
                     <i class="bi bi-pencil-square"></i>
                     {% trans %}Edit{% endtrans %}</a>
                 {% if perm_edit == "all" or (perm_edit == "own" and user_is_zone_owner) %}
-                <a class="btn btn-outline-danger btn-sm"
-                   href="index.php?page=delete_domain&id={{ zone['id'] }}">
+                <a class="btn btn-outline-danger btn-sm" href="index.php?page=delete_domain&id={{ zone['id'] }}" data-testid="delete-zone-{{ zone['id'] }}">
                     <i class="bi bi-trash"></i> {% trans %}Delete{% endtrans %}
                 </a>
                 {% endif %}
