--- a/templates/edit.html
+++ b/templates/edit.html
@@ -305,7 +305,7 @@
             <th>{% trans %}TTL{% endtrans %}</th>
         </tr>
         <tr>
-            <td class="col-sm-2"><input class="form-control form-control-sm" type="text" name="name" value="">.{{
+            <td class="col-sm-2"><input class="form-control form-control-sm" type="text" name="name" value="" data-testid="record-name-input">.{{
                 idn_zone_name ?: zone_name }}
             </td>
             <td>IN</td>
@@ -328,7 +328,7 @@
             </td>
             <td>
                 <div id="contentInputContainerBottom">
-                    <input id="recordContentBottom" class="form-control form-control-sm" type="text" name="content" value="" required>
+                    <input id="recordContentBottom" class="form-control form-control-sm" type="text" name="content" value="" data-testid="record-content-input" required>
                 </div>
                 <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
             </td>
@@ -341,19 +341,19 @@
         </tr>
     </table>
     <input class="btn btn-outline-secondary btn-sm" type="submit" name="commit"
-           value="{% trans %}Add record{% endtrans %}">
+           value="{% trans %}Add record{% endtrans %}" data-testid="add-record-button">
 
     {% if not is_reverse_zone and iface_add_reverse_record %}
     <span class="align-middle">
         &nbsp;
-        <input class="form-check-input" type="checkbox" name="reverse">
+        <input class="form-check-input" type="checkbox" name="reverse" data-testid="add-reverse-record-checkbox">
         <span class="text-secondary"> {% trans %}Also add a PTR record in the matching zone{% endtrans %}</span>
     </span>
     {% endif %}
     {% if is_reverse_zone and iface_add_domain_record %}
     <span class="align-middle">
         &nbsp;
-        <input class="form-check-input" type="checkbox" name="create_domain_record">
+        <input class="form-check-input" type="checkbox" name="create_domain_record" data-testid="add-domain-record-checkbox">
         <span class="text-secondary"> {% trans %}Also add an A/AAAA record in the matching zone{% endtrans %}</span>
     </span>
     {% endif %}
