Add Italian translation

--- a/install/templates/step1.html.twig
+++ b/install/templates/step1.html.twig
@@ -9,6 +9,7 @@
         <input id="language_en_EN" class="form-check-input" type="radio" name="language" value="en_EN" checked> <label for="language_en_EN">I prefer to proceed in english.</label><br>
         <input id="language_nl_NL" class="form-check-input" type="radio" name="language" value="nl_NL"> <label for="language_nl_NL">Ik ga graag verder in het Nederlands.</label><br>
         <input id="language_de_DE" class="form-check-input" type="radio" name="language" value="de_DE"> <label for="language_de_DE">Ich mache in Deutsch weiter.</label><br>
+        <input id="language_it_IT" class="form-check-input" type="radio" name="language" value="it_IT"> <label for="language_it_IT">Preferisco procedere in italiano.</label><br>
         <input id="language_ja_JP" class="form-check-input" type="radio" name="language" value="ja_JP"> <label for="language_ja_JP">日本語で続ける</label><br>
         <input id="language_pl_PL" class="form-check-input" type="radio" name="language" value="pl_PL"> <label for="language_pl_PL">Chcę kontynuować po polsku.</label><br>
         <input id="language_fr_FR" class="form-check-input" type="radio" name="language" value="fr_FR"> <label for="language_fr_FR">Je préfère continuer en français.</label><br>
