--- a/templates/index_list.html
+++ b/templates/index_list.html
@@ -61,4 +61,9 @@
     <li class="list-group-item list-group-item-action">
         <i class="bi bi-box-arrow-right"></i> <a href="index.php?page=logout">{% trans %}Logout{% endtrans %}</a>
     </li>
+    {% if permissions['user_is_ueberuser'] %}
+    <li class="list-group-item list-group-item-action">
+        <i class="bi bi-database-up"></i> <a href="index.php?page=migrations">{% trans %}Migrations{% endtrans %}</a>
+    </li>
+    {% endif %}
 </ul>
