feat(ui): Add configurable migrations menu visibility

--- a/templates/index_cards.html
+++ b/templates/index_cards.html
@@ -130,7 +130,7 @@
             </div>
         </div>
     </div>
-    {% if permissions['user_is_ueberuser'] %}
+    {% if permissions['user_is_ueberuser'] and migrations_show %}
     <div class="col-sm-3 mb-3">
         <div class="card">
             <div class="text-center"><i class="bi bi-database-up display-1"></i></div>
