--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -30,6 +30,9 @@
             <td>{% trans %}Content{% endtrans %}</td>
             <td>{% trans %}Priority{% endtrans %}</td>
             <td>{% trans %}TTL{% endtrans %}</td>
+            {% if iface_record_comments %}
+                <td>{% trans %}Comment{% endtrans %}</td>
+            {% endif %}
         </tr>
         <tr>
             <td class="col-sm-2"><input class="form-control form-control-sm" type="text" name="name" value="{{ name }}">.{{
@@ -59,6 +62,9 @@
                                         value="{{ prio }}" min="0" max="65535" pattern="[0-9]*"></td>
             <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="ttl" value="{{ ttl }}"
                                         min="0" max="2147483647" pattern="[0-9]*" required></td>
+            {% if iface_record_comments %}
+                <td><input class="form-control form-control-sm" type="text" name="comment" value=""></td>
+            {% endif %}
         </tr>
     </table>
     <br>
