--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -30,6 +30,9 @@
             <th>{% trans %}Content{% endtrans %}</th>
             <th>{% trans %}Priority{% endtrans %}</th>
             <th>{% trans %}TTL{% endtrans %}</th>
+            {% if iface_record_comments %}
+                <th>{% trans %}Comment{% endtrans %}</th>
+            {% endif %}
             <th>{% trans %}Disabled{% endtrans %}</th>
         </tr>
         </thead>
@@ -42,6 +45,10 @@
             <td>{{ record['content'] }}</td>
             <td>{{ record["prio"] }}</td>
             <td>{{ record["ttl"] }}</td>
+            {% if iface_record_comments %}
+                <td>{{ record["comment"] }}</td>
+            {% endif %}
+            {$ endif %}
             {% else %}
             <td>
                 <input type="hidden" name="rid" value="{{ record_id }}">
@@ -78,6 +85,11 @@
                        pattern="[0-9]*" value="{{ record['prio'] }}"></td>
             <td><input class="form-control form-control-sm" type="number" name="ttl" min="0" max="2147483647"
                        pattern="[0-9]*" value="{{ record['ttl'] }}"></td>
+            {% if iface_record_comments %}
+                <td>
+                    <textarea class="form-control form-control-sm" name="comment" rows="1">{{ comment }}</textarea>
+                </td>
+            {% endif %}
             <td>
                 <input class="form-check-input" type="checkbox" name="disabled" {% if record['disabled'] == 1 %}checked{% endif %}>
             </td>
