--- a/templates/edit.html
+++ b/templates/edit.html
@@ -196,12 +196,12 @@
             <td class="col-sm-2">{{ r['name'] }}</td>
             <td class="col-sm-1">{{ r['type'] }}</td>
             <td>{{ r['content'] }}</td>
-            <td>&nbsp;</td>
+            <td>-</td>
             <td class="col-sm-1">{{ r['ttl'] }}</td>
             {% if iface_record_comments %}
-            <td>{{ r['comment'] }}</td>
+            <td>{{ r['comment'] ?? '-' }}</td>
             {% endif %}
-            <td>&nbsp;</td>
+            <td class="text-center">{{ r['disabled'] ? 'Yes'|trans : 'No'|trans }}</td>
             {% else %}
             <td class="col-sm-2"><input class="form-control form-control-sm" type="text"
                                         name="record[{{ r['id'] }}][name]" value="{{ r['name'] }}"></td>
