--- a/templates/login.html
+++ b/templates/login.html
@@ -8,13 +8,13 @@
 <form class="needs-validation" method="post" action="index.php" novalidate>
     <input type="hidden" name="_token" value="{{ login_token }}">
     <input type="hidden" name="query_string" value="{{ query_string }}">
-    <div class="row g-2 col-sm-4">
-        <div>
+    <div class="row g-2 col-sm-4 col-md-6 col-lg-4">
+        <div class="col-12">
             <label for="username" class="form-label">{% trans %}Username{% endtrans %}</label>
             <input type="text" data-testid="username-input" class="form-control form-control-sm" id="username" name="username" required>
             <div data-testid="username-error" class="invalid-feedback">{% trans %}Please provide a username{% endtrans %}</div>
         </div>
-        <div>
+        <div class="col-12">
             <label for="password" class="form-label">{% trans %}Password{% endtrans %}</label>
             <div class="input-group">
                 <input type="password" data-testid="password-input" class="form-control form-control-sm" id="password" name="password" required>
@@ -23,14 +23,14 @@
             </div>
         </div>
         {% if show_language_selector %}
-        <div>
+        <div class="col-12">
             <label for="language" class="form-label">{% trans %}Language{% endtrans %}</label>
             <select class="form-select form-select-sm" id="language" name="userlang">
                 {{ locale_options | raw }}
             </select>
         </div>
         {% endif %}
-        <div>
+        <div class="col-12">
             <input type="submit" data-testid="login-button" name="authenticate" class="btn btn-primary btn-sm" value=" {% trans %}Go{% endtrans %} ">
         </div>
     </div>
