--- a/templates/edit.html
+++ b/templates/edit.html
@@ -13,26 +13,9 @@
     </ol>
 </nav>
 
-{% if idn_zone_name %}
-<h5 class="mb-3">{% trans %}Edit zone{% endtrans %} "{{ idn_zone_name }}" ({{ zone_name_to_display }})</h5>
-{% else %}
-<h5 class="mb-3">{% trans %}Edit zone{% endtrans %} "{{ zone_name_to_display }}"</h5>
-{% endif %}
-
-<div>
-    {{ pagination | raw }}
-</div>
-
-{% if not records %}
-<table class="table table-striped table-hover table-sm">
-    <tr>
-        <td>{% trans %}This zone does not have any records.{% endtrans %}</td>
-    </tr>
-</table>
-<hr>
-{% else %}
-
 {% if (perm_edit == "all" or (perm_edit == "own" or perm_edit == "own_as_client") and user_is_zone_owner == "1") and domain_type != "SLAVE" and iface_edit_add_record_top %}
+<h5 class="mb-3">{% trans %}Add new record{% endtrans %}</h5>
+
 <form class="needs-validation" method="post" action="index.php?page=add_record&id={{ zone_id }}" novalidate>
     <input type="hidden" name="_token" value="{{ csrf_token }}">
     <input type="hidden" name="domain" value="{{ zone_id }}">
@@ -46,6 +29,9 @@
             <th>{% trans %}Content{% endtrans %}</th>
             <th>{% trans %}Priority{% endtrans %}</th>
             <th>{% trans %}TTL{% endtrans %}</th>
+            {% if iface_record_comments %}
+                <th>{% trans %}Comment{% endtrans %}</th>
+            {% endif %}
             <th class="text-center">
                 {% if not is_reverse_zone and iface_add_reverse_record %}
                     {% trans %}Add PTR{% endtrans %}
@@ -92,6 +78,9 @@
                                         min="0" max="2147483647" pattern="[0-9]*" value="{{ dns_ttl }}" required>
                 <div class="invalid-feedback">{% trans %}Provide TTL{% endtrans %}</div>
             </td>
+            {% if iface_record_comments %}
+            <td><input class="form-control form-control-sm" type="text" name="comment" value=""></td>
+            {% endif %}
             <td class="col-sm-1 text-center">
                 {% if not is_reverse_zone and iface_add_reverse_record %}
                 <span class="align-middle">
@@ -113,6 +102,25 @@
 </form>
 <hr>
 {% endif %}
+
+{% if idn_zone_name %}
+<h5 class="mb-3">{% trans %}Edit zone{% endtrans %} "{{ idn_zone_name }}" ({{ zone_name_to_display }})</h5>
+{% else %}
+<h5 class="mb-3">{% trans %}Edit zone{% endtrans %} "{{ zone_name_to_display }}"</h5>
+{% endif %}
+
+<div>
+    {{ pagination | raw }}
+</div>
+
+{% if not records %}
+<table class="table table-striped table-hover table-sm">
+    <tr>
+        <td>{% trans %}This zone does not have any records.{% endtrans %}</td>
+    </tr>
+</table>
+<hr>
+{% else %}
 
 <form class="needs-validation" method="post" action="" novalidate>
     <input type="hidden" name="_token" value="{{ csrf_token }}">
@@ -281,7 +289,7 @@
     </table>
 
     {% if perm_edit != "none" %}
-    <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}">
+    <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Save changes{% endtrans %}">
     <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset{% endtrans %}">
     {% endif %}
 
