style(edit): make SOA record font size consistent, related to #581

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -196,7 +196,7 @@
         <input type="hidden" name="record[{{ r['id'] }}][rid]" value="{{ r['id'] }}">
         <input type="hidden" name="record[{{ r['id'] }}][zid]" value="{{ zone_id }}">
         {% endif %}
-        <tr>
+        <tr style="font-size: 14px;">
             {% if iface_edit_show_id %}
             <td>{{ r['id'] }}</td>
             {% endif %}
