fix(edit): handle missing record comments, resolves #617

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -94,7 +94,7 @@
                 {% endif %}
             </td>
             <td class="col-sm-1">
-                <input class="btn btn-outline-secondary btn-sm" type="submit" name="commit"
+                <input class="btn btn-primary btn-sm" type="submit" name="commit"
                        value="{% trans %}Add record{% endtrans %}">
             </td>
         </tr>
@@ -372,7 +372,7 @@
             {% endif %}
         </tr>
     </table>
-    <input class="btn btn-outline-secondary btn-sm" type="submit" name="commit"
+    <input class="btn btn-primary btn-sm" type="submit" name="commit"
            value="{% trans %}Add record{% endtrans %}" data-testid="add-record-button">
 
     {% if not is_reverse_zone and iface_add_reverse_record %}
