improve(install): enhance database configuration validation and security

--- a/install/templates/step3.html.twig
+++ b/install/templates/step3.html.twig
@@ -104,6 +104,7 @@
                 </td>
                 <td>
                     {% trans %}The password of the Poweradmin administrator. This administrator has full rights to Poweradmin using the web interface.{% endtrans %}
+                    {% trans %}Password must be at least 6 characters long, contain at least one uppercase letter, one lowercase letter, and one number.{% endtrans %}
                     {% trans %}The default username is "admin".{% endtrans %}
                 </td>
             </tr>
