--- a/install/templates/step3.html.twig
+++ b/install/templates/step3.html.twig
@@ -32,7 +32,7 @@
             </tr>
             <tr id="username_row">
                 <td>{% trans %}Username{% endtrans %}</td>
-                <td class="w-25">
+                <td>
                     <input id="username" class="form-control form-control-sm" type="text" name="db_user" value="{{ db_user }}" required>
                     <div class="invalid-feedback">{% trans %}Provide the user name{% endtrans %}</div>
                 </td>
@@ -52,7 +52,7 @@
                 </td>
                 <td>{% trans %}The password for this username.{% endtrans %}</td>
             </tr>
-            <tr id="hostname_row">
+            <tr id="db_hostname_row">
                 <td>{% trans %}Hostname{% endtrans %}</td>
                 <td>
                     <input class="form-control form-control-sm" type="text" id="host" name="db_host" value="{{ db_host|default('localhost') }}" required>
@@ -61,7 +61,7 @@
                 <td>{% trans %}The hostname on which the PowerDNS database resides. Frequently, this will be "localhost".{% endtrans %}
                 </td>
             </tr>
-            <tr id="dbport_row">
+            <tr id="db_port_row">
                 <td>{% trans %}DB Port{% endtrans %}</td>
                 <td>
                     <input class="form-control form-control-sm" type="text" id="db_port" name="db_port" value="{{ db_port|default('3306') }}" required>
@@ -71,7 +71,7 @@
             </tr>
             <tr>
                 <td>{% trans %}Database{% endtrans %}</td>
-                <td>
+                <td class="w-25">
                     <input class="form-control form-control-sm" type="text" name="db_name" value="{{ db_name }}" required>
                     <div class="invalid-feedback">{% trans %}Provide the name of the database{% endtrans %}</div>
                 </td>
@@ -97,7 +97,7 @@
                 <td>{% trans %}Poweradmin administrator password{% endtrans %}</td>
                 <td>
                     <div class="input-group">
-                        <input class="form-control form-control-sm" type="password" id="pa_pass" name="pa_pass" value="" autocomplete="off" required>
+                        <input class="form-control form-control-sm" type="password" id="pa_pass" name="pa_pass" value="{{ pa_pass }}" autocomplete="off" required>
                         <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('pa_pass', 'eye2')"><i class="bi bi-eye-fill" id="eye2"></i></button>
                         <div class="invalid-feedback">{% trans %}Provide a password{% endtrans %}</div>
                     </div>
