feat(install): add database collation support to installation flow

--- a/install/templates/step5.html.twig
+++ b/install/templates/step5.html.twig
@@ -20,6 +20,7 @@
         <input type="hidden" name="db_user" value="{{ db_user }}">
         <input type="hidden" name="db_pass" value="{{ db_pass }}">
         <input type="hidden" name="db_charset" value="{{ db_charset }}">
+        <input type="hidden" name="db_collation" value="{{ db_collation }}">
         <input type="hidden" name="pa_db_user" value="{{ pa_db_user }}">
         <input type="hidden" name="pa_db_pass" value="{{ pa_db_pass }}">
         <input type="hidden" name="pa_pass" value="{{ pa_pass }}">
